--- a/microservicio-api-mercadolibre-gateway/pom.xml
+++ b/microservicio-api-mercadolibre-gateway/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.cloud.tools/appengine-maven-plugin -->
+		<dependency>
+		    <groupId>com.google.cloud.tools</groupId>
+		    <artifactId>appengine-maven-plugin</artifactId>
+		    <version>2.8.1</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -68,6 +74,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+			    <artifactId>appengine-maven-plugin</artifactId>
+			    <version>2.8.1</version>
+				<configuration>
+				   <deploy.projectId>GCLOUD_CONFIG</deploy.projectId>
+				   <deploy.version>GCLOUD_CONFIG</deploy.version>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
